@@ -1,5 +1,7 @@
 2005-04-26  Kristian Høgsberg  <krh@redhat.com>
 
+	* src/cairo-png.h: Prototypes moved to cairo.h, this file removed.
+
 	* src/cairo-png.c (cairo_surface_write_to_png_stream): Renamed
 	from cairo_surface_write_png_to_stream() for consistency.
 	(cairo_surface_write_to_png): Renamed from
